now have website working

--- a/Python/new_workflow/website/index.html
+++ b/Python/new_workflow/website/index.html
@@ -13,6 +13,12 @@
         <h1>Rocket Events</h1>
     </header>
 
+    <h2>Select a CSV File</h2>
+    <!-- Dropdown to choose a CSV file -->
+    <select id="csvSelect">
+        <option value="">-- Select a CSV File --</option>
+    </select> 
+
     <div class="launch-list">
         <p id="jsonTable"></p>
     </div>
