--- a/Python/new_workflow/website/event.html
+++ b/Python/new_workflow/website/event.html
@@ -24,17 +24,25 @@
     </div>
 
     <div class="event_page">
-        <h1 id="event_title"></h1>
-        <p id="event_datetime"></p>
-        <p id="event_slc"></p>
+        <table>
+        <tr>
+            <th>UTC</th><th>SLC</th><th>Rocket</th><th>Mission</th>
+        </tr>
+        <tr>
+        <td id="event_datetime"></td>
+        <td id="event_slc"></td>
+        <td id="event_rocket"></td>
+        <td id="event_mission"></td>
+        </tr>
+        </table>
     </div>
     
     <!-- Radio buttons to choose between two images -->
     <input type="radio" name="imageOption" value="image1" id="image1" checked> Infrasonic<br>
     <input type="radio" name="imageOption" value="image2" id="image2"> Seismic Velocity<br>
     <input type="radio" name="imageOption" value="image3" id="image3"> Seismic Displacement<br>    
-    <input type="radio" name="imageOption" value="image4" id="image4"> HDD<br>    
-    <input type="radio" name="imageOption" value="image5" id="image5"> WLM<br>
+    <input type="radio" name="imageOption" value="image4" id="image4"> Calibrated Well Data<br>    
+    <input type="radio" name="imageOption" value="image5" id="image5"> Water Level Data<br>
 
     <br>
     
