website updates - next step is a separate repo for whole website

--- a/Python/new_workflow/website/event.html
+++ b/Python/new_workflow/website/event.html
@@ -58,7 +58,13 @@
     <script src="event.js"></script>
 
     <footer>
-        <p>&copy; The Seismo-Acoustic Rocket Event Catalog<br/>Glenn Thompson 2025</p>
+        <table>
+            <tr>
+        <td><img height="200em" src="rocketcat.jpg"></td>
+        <td><b>ROCKETCAT</b>: The Seismo-Acoustic Rocket Event Catalog 
+            <br/>&copy; Glenn Thompson, 2025</td>
+        </tr>
+        </table>
     </footer>
 
 </body>
