--- a/Python/new_workflow/website/index.html
+++ b/Python/new_workflow/website/index.html
@@ -23,9 +23,24 @@
         <p id="jsonTable"></p>
     </div>
 
+        <table>
+            <tr>
+        <td><img height="200em" src="rocketcat.jpg"></td>
+        <td><b>ROCKETCAT</b>: The Seismo-Acoustic Rocket Event Catalog 
+            <br/>&copy; Glenn Thompson, 2025</td>
+        </tr>
+        </table>
+            
     <footer>
-        <p>&copy; The Seismo-Acoustic Rocket Event Catalog<br/>Glenn Thompson 2025</p>
+    <h2 class='center'>Links:</h2>
+    <table>
+    <tr><td>
+    <a class='center' href="http://131.247.211.6/rocketseismology/index.html"><img src="http://131.247.211.6/rocketseismology/rocket_seismology.jpg"></a>
+    </td><td><a class='center' href="/flovo"><img src="/flovo/flovo.jpg"></a>
+    </td><td><a class='center' href="/environmentalseismology"><img width=400em src="/environmentalseismology/envseis.jpg"></a>
+    </td></tr></table>
     </footer>
+
 
     <script src="index.js"></script>
 </body>
